# elmo_driver

./: CMakeLists.txt  readme.md
SOEM/: CMakeLists.txt
example/: CMakeLists.txt  cascade_ctrl.c  config.c  enable.c  main.c  pd_lock.c  sampling.c  traj_ctrl.c  util.c  util.h
include/: ec_elmo.h  elmo_interface.h  elmo_motor.h
src/: CMakeLists.txt  ec_elmo.c  ec_elmo.h  elmo_interface.c  elmo_motor.c  elmo_motor.h
test/: CMakeLists.txt  elmo_test.c
